* replaced mdb_config::pilot_imdbfallback_enabled by the global constant
  PILOT_IMDBFILL - which is defined in the default mdb_config.class.php only
  if it was not defined before
! IMDB changed the format of the AKAs today - so imdb::alsoknow() had to be fixed
! imdb::trivia() was broken due to site changes
! Makefile forgot to install index.html - and to uninstall pilot_person.class.php

v1.9.9 (24.02.2010)
-------------------
* imdb::movieconnection() - fixed FollowedBy and added Follows (tnx 2 Qvist)
* imdb::releaseInfo() now catches a few more cases (missing links)
* imdbXML class updated with a patch from the author
+ imdb::movieconnections() - added more connections (tnx to Qvist)
! IMDB Search did not work with the localized sites due to new domains used
! imdb_person::filmograf did not catch characters if they had no link. Due
  to changes on the IMDB sites, it in fact did no longer catch any character...
+ pilot movie class now correctly assigns the persons IMDBID
! imdb_person: born() and died() missed to return the year due to IMDB site changes
! imdb::seasons() returned wrong season count, and imdb::episodes() got messed up on airing dates
+ pilot_person: class added
! imdb::releaseInfo() did not recognize entries without day - fixed.
+ caching functionality added to the imdbsearch class
+ pilotsearch class now stores found movies to cache
+ *_person::movies_writer() added to get writers filmography
! imdb_person::born() and died() have been broken by IMDB changes again - fixed.
  Same for interviews(), articles(), pictorials() and magcovers().
! imdb::color() has been broken by IMDB changes - also fixed. Same for
  imdb::sound(), mpaa() and mpaa_hist()

v1.9.8 (02.12.2009)
-------------------
* started restructuring the classes and files to provide a core API for extensions
+ first extension added: basic functionality for MoviePilot
  (http://www.moviepilot.de/), supporting some movie functionality only